# ai-powerup-oct-25

./: .gitignore  ACHIEVEMENTS.md  ACHIEVEMENT_PROGRESS.md  CONTRIBUTORS.md  DISCORD_SHOW_AND_TELL.md  FINAL-STEPS.md  GETTING_STARTED.md  PORTFOLIO.md  PROJECT_COMPLETION_SUMMARY.md  README.md  WEEK1-REFLECTION.md  WEEK4_COMPLETION_SUMMARY.md  WEEK5_WEEK6_COMPLETION_SUMMARY.md  requirements.txt  setup-gemini.sh  setup.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
aice-calculator/: ENHANCED_PROMPTING_SUMMARY.md  README.md  calculator_agent.py  calculator_tools.py  demo_calculator.py  enhanced_prompting_test.py  main.py  prompting_comparison.py  prompting_demo.py  pyproject.toml  quick_test.py  test_tools.py  web_calculator.py
aice-extractor/: job_extractor.py  job_models.py
capstone-project/: .env.example  .gitignore  QUICK_START.md  README.md  docker-compose.yml  requirements-backend.txt  requirements-frontend.txt  run.sh  setup.sh
exercises/: langchain-joke-teller.md  plan-your-personal-project.md  setup-langfuse-observability.md
langchain-chatbot/: .env.example  README.md  app.py  enhanced_app.py  rag_enhanced_chatbot.py  requirements.txt
langchain-joke-teller/: README.md  app.py  requirements.txt
my-ai-workflow/: COMPLETION-GUIDE.md  README.md  WEEK1-REFLECTION.md  learning_session.md
personal-project/: project-plan.md
promptkit/: README.md
python-mentor-ai/: .env.example  (+6 more)
week4-anonymiser-exploration/: .gitignore  Dockerfile  README.md  anonymiser.py  dev.sh  docker-compose.yml  pyproject.toml  serve.sh  test_api.py  test_curl.sh
(+78 files in other folders)
