[project]
name = "aice-anonymiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "en-core-web-sm",
    "faker>=37.3.0",
    "fastapi>=0.115.12",
    "langchain-experimental>=0.3.4",
    "numpy<2.0.0",
    "pip>=25.1.1",
    "presidio-analyzer>=2.2.358",
    "presidio-anonymizer>=2.2.358",
    "spacy<3.8.0",
    "uvicorn>=0.34.3",
]

[tool.uv]
dev-dependencies = []
package = true

# Scripts removed - use uv run uvicorn commands directly

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
